<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:background="@color/gameViewBackgroundColor" >

	<Button
		android:id="@+id/highscore_button"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_centerHorizontal="true"
		android:layout_centerVertical="true"
		android:background="@color/panelColor"
		android:layout_margin="@dimen/title_button_margin"
		android:padding="@dimen/title_button_padding"
		android:text="@string/highscore"
		android:textColor="@color/buttonLabelColor"
		android:typeface="monospace"
		android:onClick="HighscoreButtonClicked" />

	<Button
		android:id="@+id/start_button"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_above="@+id/highscore_button"
		android:layout_centerHorizontal="true"
		android:background="@color/panelColor"
		android:layout_margin="@dimen/title_button_margin"
		android:padding="@dimen/title_button_padding"
		android:text="@string/start_game"
		android:textColor="@color/buttonLabelColor"
		android:typeface="monospace"
		android:onClick="StartButtonClicked" />

	<Button
		android:id="@+id/config_button"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_below="@+id/highscore_button"
		android:layout_centerHorizontal="true"
		android:background="@color/panelColor"
		android:layout_margin="@dimen/title_button_margin"
		android:padding="@dimen/title_button_padding"
		android:text="@string/config"
		android:textColor="@color/buttonLabelColor"
		android:typeface="monospace"
		android:onClick="ConfigButtonClicked" />

	<TextView
		android:id="@+id/title_label"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_above="@+id/start_button"
		android:layout_centerHorizontal="true"
		android:text="@string/app_name"
		android:textAppearance="?android:attr/textAppearanceLarge"
		android:layout_marginBottom="@dimen/title_title_margin_bottom" />

	<TextView
	    android:id="@+id/version_label"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:layout_alignParentBottom="true"
	    android:layout_alignParentRight="true"
	    android:textAppearance="?android:attr/textAppearanceMedium" />

	<TextView
	    android:id="@+id/versionlabellabel"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:layout_alignParentBottom="true"
	    android:layout_toLeftOf="@+id/version_label"
	    android:text="@string/VersionLabel"
	    android:textAppearance="?android:attr/textAppearanceMedium" />

</RelativeLayout>
